# mealt

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml
guest_list/: Cargo.toml  package.json  pnpm-lock.yaml
guest_list/src/: create_tables.sql  database.rs  email.rs  main.rs  secrets.rs
guest_list/src/auth/: mod.rs
guest_list/templates/: apps.html  index.html  layout.html
server/: Cargo.toml
server/src/: key_package.rs  main.rs  mls_message.rs  user_actor.rs  websocket_actor.rs
src/: App.tsx  AppContext.tsx  index.tsx
src-tauri/: Cargo.toml  player2.tauri.config.json  tauri.conf.json
src-tauri/capabilities/: i-guess-i-need-an-identifier-but-idk-what-to-put-here.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: create_user.rs  mod.rs
src/routes/: Group.tsx  Groups.tsx  Home.tsx
