[package]
name = "mealt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mealt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openmls = "0.5.0"
openmls_traits = "0.2.0"
openmls_basic_credential = "0.2.0"
openmls_rust_crypto = "0.2.0"
thiserror = "1.0.61"
base64 = "0.22.1"
reqwest = "0.12.4"
tls_codec = "0.3"
tokio = { version = "1.38.0", features = ["sync"] }
